Bug #1905 - Calendar Mobile: Create event date picker overflows a little

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -2490,6 +2490,9 @@ body{
         }
     }
 }
+#ui-datepicker-div{
+    width: 18.2em;
+}
 #ui-timepicker-div {
     .ui-timepicker-table {
         width: 100%;
